# transcontinental_stocks_platform

./: Cargo.toml  cargo_libs.txt
src/: main.rs
src/adapters/: mod.rs
src/adapters/database/: db_pool.rs  mod.rs  postgres_pool.rs  redis_pool.rs
src/adapters/database/repository/: users_repository.rs
src/adapters/general/: general_responses.rs  mod.rs
src/adapters/security/: login_handler.rs  mod.rs  password_handler.rs  session_middleware.rs
src/business/: mod.rs
src/business/controller/: mod.rs  test_controllers.rs  user_controllers.rs
src/business/data_structures/: mod.rs  platform_structs.rs
src/business/logic/: mod.rs  users_business_logic.rs
