[package]
name = "transcontinental_stocks_platform"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bson = "3.0.0"
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
mongodb = "3.3.0"
ring = "0.17.14"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full", "macros", "rt-multi-thread"] }
