[package]
name = "transcontinental_stocks_platform"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
ring = "0.17.14"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full", "macros", "rt-multi-thread"] }
tokio-postgres = "0.7.13"
