[package]
name = "transcontinental_stocks_platform"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.4"
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
jsonwebtoken = "9.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
redis = { version = "0.32.6", features = ["tokio-comp"] }
ring = "0.17.14"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full", "macros", "rt-multi-thread"] }
tokio-postgres = "0.7.13"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
